[gd_scene load_steps=6 format=2]

[ext_resource path="res://World/pictures/hybrid/sewer_1.png" type="Texture" id=1]
[ext_resource path="res://World/script/sewerDoor_locked.gd" type="Script" id=2]
[ext_resource path="res://NPC/picture/interact-removebg-preview.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 128, 12, 16, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 13 )

[node name="sewer_door" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="TextureButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -27, -28 )
scale = Vector2( 0.165625, 0.0888889 )
normal = ExtResource( 3 )

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
